improve scraper, make gcloud deployment, improve UI, update private-gpt config, model

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,21 @@
-FROM denoland/deno:latest
+FROM denoland/deno:1.36.1
 
 WORKDIR /app
 
-COPY . .
+# Add a build argument
+ARG BUILD_DATE
 
+# Use the build argument to create a label
+LABEL build_date=$BUILD_DATE
+
+COPY deps.ts .
+RUN deno cache deps.ts
+
+COPY . .
 RUN deno cache server.ts
 
-EXPOSE 80
-ENV DENO_RUN_ARGS="--allow-net --allow-read --allow-write"
+COPY version.txt .
 
-# Run the Deno application
-CMD ["sh", "-c", "deno run $DENO_RUN_ARGS server.ts"]
+EXPOSE 80
+
+CMD ["run", "--allow-net", "--allow-read", "--allow-write", "server.ts"]
