--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ doc-scraper/venv/
 doc-scraper/documentation_scraper/documentation_scraper/__pycache__/
 doc-scraper/documentation_scraper/documentation_scraper/spiders/__pycache__
 doc-scraper/documentation_scraper/docs.json
+doc-scraper/documentation_scraper/data/
+doc-scraper/data/
 frontend/chat.log
 frontend/chat_usage.db
