--- a/gcloud/ollama/deployment.yaml
+++ b/gcloud/ollama/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ollama-deployment
   namespace: default
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: ollama
@@ -20,20 +20,12 @@ spec:
         resources:
           requests:
             cpu: "1800m"
-            memory: "10Gi"
+            memory: "15Gi"
             nvidia.com/gpu: 1
           limits:
             cpu: "1800m"
-            memory: "10Gi"
+            memory: "15Gi"
             nvidia.com/gpu: 1
-        securityContext:
-          capabilities:
-            drop:
-            - NET_RAW
-        volumeMounts:
-        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
-          name: kube-api-access
-          readOnly: true
       nodeSelector:
         cloud.google.com/gke-accelerator: nvidia-tesla-t4
         cloud.google.com/compute-class: Accelerator
@@ -42,21 +34,6 @@ spec:
         operator: "Exists"
         effect: "NoSchedule"
       volumes:
-      - name: kube-api-access
-        projected:
-          defaultMode: 420
-          sources:
-          - serviceAccountToken:
-              expirationSeconds: 3607
-              path: token
-          - configMap:
-              items:
-              - key: ca.crt
-                path: ca.crt
-              name: kube-root-ca.crt
-          - downwardAPI:
-              items:
-              - fieldRef:
-                  apiVersion: v1
-                  fieldPath: metadata.namespace
-                path: namespace
+      - name: shared-storage
+        persistentVolumeClaim:
+          claimName: ollama-pvc
