--- a/gcloud/private-gpt/deployment.yaml
+++ b/gcloud/private-gpt/deployment.yaml
@@ -15,13 +15,10 @@ spec:
     spec:
       containers:
       - name: private-gpt
-        image: softa/private-gpt:latest
+        image: softa/private-gpt-ollama:1.0.3
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
-        volumeMounts:
-        - name: shared-storage
-          mountPath: /mnt/shared
         env:
         - name: PORT
           value: "8080"
@@ -31,12 +28,20 @@ spec:
           value: "ollama"
         resources:
           requests:
-            memory: "12Gi"
+            memory: "16Gi"
             cpu: "1800m"
           limits:
-            memory: "15Gi"
+            memory: "16Gi"
             cpu: "1800m"
+        volumeMounts:
+        - name: local-storage
+          mountPath: /mnt/shared  # Mounting the local PVC for Qdrant
+        - name: shared-storage
+          mountPath: /home/worker/app/docs  # Mounting the NFS volume for scraped documents
       volumes:
+      - name: local-storage
+        persistentVolumeClaim:
+          claimName: private-gpt-pvc  # Local PVC for fast access
       - name: shared-storage
         persistentVolumeClaim:
-          claimName: private-gpt-pvc
+          claimName: filestore-pvc  # NFS-backed PVC for shared storage of scraped documents
