--- a/local_configs/settings-docker.yaml
+++ b/local_configs/settings-docker.yaml
@@ -4,14 +4,14 @@ server:
 llm:
   mode: ollama
   max_new_tokens: 1024
-  context_window: 7900
+  context_window: 32000
   temperature: 0.1     #The temperature of the model. Increasing the temperature will make the model answer more creatively. A value of 0.1 would be more factual. (Default: 0.1)
 
 embedding:
   mode: ollama
 
 ollama:
-  llm_model: wizardlm2
+  llm_model: "llama3.1"
   embedding_model: nomic-embed-text
   api_base: http://ollama-service:11434
   embedding_api_base: http://ollama-service:11434  # change if your embedding model runs on another ollama
@@ -27,7 +27,10 @@ vectorstore:
   database: qdrant
 
 qdrant:
-  path: local_data/private_gpt/qdrant
+  path: /mnt/shared/local_data/private_gpt/qdrant
+
+ingestion:
+  enabled: true
 
 ui:
   enabled: false
