--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,9 @@ ARG BUILD_DATE
 # Use the build argument to create a label
 LABEL build_date=$BUILD_DATE
 
+# Create a directory for the database with proper permissions
+RUN mkdir -p /app/data && chown 1000:1000 /app/data
+
 COPY deps.ts .
 RUN deno cache deps.ts
 
@@ -17,5 +20,7 @@ RUN deno cache server.ts
 COPY version.txt .
 
 EXPOSE 80
+
+USER 1000
 
 CMD ["run", "--allow-net", "--allow-read", "--allow-write", "server.ts"]
