--- a/doc-scraper/Dockerfile
+++ b/doc-scraper/Dockerfile
@@ -13,14 +13,12 @@ RUN . /app/venv/bin/activate && pip install --no-cache-dir -r requirements.txt
 
 COPY documentation_scraper /app
 
-RUN mkdir -p /app/data && chown -R seluser:seluser /app/data
+RUN mkdir -p /app/data && chown -R 1000:1000 /app/data && chmod -R 777 /app/data
 
 ENV OUTPUT_PATH /app/data
-
 ENV SCRAPY_SETTINGS_MODULE=documentation_scraper.settings
-
 ENV PYTHONPATH=/app
 
-USER seluser
+USER 1000
 
 CMD ["/app/venv/bin/python", "run_spiders.py"]
