--- a/private_gpt_docker_configs/settings-docker.yaml
+++ b/private_gpt_docker_configs/settings-docker.yaml
@@ -3,15 +3,15 @@ server:
 
 llm:
   mode: ollama
-  max_new_tokens: 1024
-  context_window: 32000
+  max_new_tokens: 2048
+  context_window: 15000
   temperature: 0.1     #The temperature of the model. Increasing the temperature will make the model answer more creatively. A value of 0.1 would be more factual. (Default: 0.1)
 
 embedding:
   mode: ollama
 
 ollama:
-  llm_model: "llama3.1"
+  llm_model: "deepseek-r1:14b"
   embedding_model: nomic-embed-text
   api_base: http://ollama-service:11434
   embedding_api_base: http://ollama-service:11434  # change if your embedding model runs on another ollama
