--- a/docker-compose-no-scraper.yaml
+++ b/docker-compose-no-scraper.yaml
@@ -1,16 +1,22 @@
+version: "3.8"
 services:
   ollama-service:
     image: ollama/ollama:latest
     volumes:
       - ./models:/root/.ollama
+    pull_policy: always
     ports:
-      - 11434:11434
+      - "11434:11434"
+    runtime: nvidia
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
     deploy:
       resources:
         reservations:
           devices:
-            - capabilities: [gpu]
-    runtime: nvidia
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     networks:
       - private-network
 
