--- a/private_gpt_docker_configs/settings-docker.yaml
+++ b/private_gpt_docker_configs/settings-docker.yaml
@@ -11,7 +11,7 @@ embedding:
   mode: ollama
 
 ollama:
-  llm_model: "gemma3:27b"
+  llm_model: "gemma3"
   embedding_model: nomic-embed-text
   api_base: http://ollama-service:11434
   embedding_api_base: http://ollama-service:11434  # change if your embedding model runs on another ollama
