--- a/private_gpt_k8s_configs/settings-docker.yaml
+++ b/private_gpt_k8s_configs/settings-docker.yaml
@@ -11,7 +11,7 @@ embedding:
   mode: ollama
 
 ollama:
-  llm_model: "llama3.2"
+  llm_model: "gemma3n"
   embedding_model: nomic-embed-text
   api_base: http://ollama-service.ollama.svc.cluster.local:11434
   embedding_api_base: http://ollama-service.ollama.svc.cluster.local:11434  # change if your embedding model runs on another ollama
