--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,12 @@
 services:
   ollama-service:
     image: ollama/ollama:latest
+    ports: ["11434:11434"]
+    pull_policy: always
     volumes:
       - ./models:/root/.ollama
-    pull_policy: always
-    ports:
-      - "11434:11434"
-    runtime: nvidia
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+    devices:
+      - "nvidia.com/gpu=all"
     networks:
       - private-network
 
@@ -23,7 +14,7 @@ services:
       image: alpine:latest
       depends_on:
         - ollama-service
-      entrypoint: ["/bin/sh", "-c", "apk add --no-cache curl && while ! curl -sf http://ollama-service:11434/api/tags; do echo waiting for ollama-service; sleep 5; done; curl -X POST http://ollama-service:11434/api/pull -d '{\"name\": \"gemma3:27b\"}' && curl -X POST http://ollama-service:11434/api/pull -d '{\"name\": \"nomic-embed-text\"}'"]
+      entrypoint: ["/bin/sh", "-c", "apk add --no-cache curl && while ! curl -sf http://ollama-service:11434/api/tags; do echo waiting for ollama-service; sleep 5; done; curl -X POST http://ollama-service:11434/api/pull -d '{\"name\": \"gpt-oss\"}' && curl -X POST http://ollama-service:11434/api/pull -d '{\"name\": \"nomic-embed-text\"}'"]
       networks:
         - private-network
 
