fix frontend, private-gpt ingest bug, doc scraper bug

--- a/doc-scraper/Dockerfile
+++ b/doc-scraper/Dockerfile
@@ -26,12 +26,14 @@ RUN . /app/venv/bin/activate && pip install --no-cache-dir -r requirements.txt
 
 COPY documentation_scraper /app
 
-RUN mkdir -p /app/data && chown -R 1000:1000 /app/data && chmod -R 777 /app/data
+COPY entrypoint.sh /app/entrypoint.sh
+RUN mkdir -p /app/data \
+ && chown -R 1000:1000 /app/data \
+ && chmod -R 777 /app/data \
+ && chmod +x /app/entrypoint.sh
 
 ENV OUTPUT_PATH /app/data
 ENV SCRAPY_SETTINGS_MODULE=documentation_scraper.settings
 ENV PYTHONPATH=/app
 
-USER 1000
-
-CMD ["/app/venv/bin/python", "run_spiders.py"]
+ENTRYPOINT ["/app/entrypoint.sh"]
